lifeguard-derive/tests/ui/compile_error_composite_unique_nonexistent_column.stderr
error[E0000]: Column 'nonexistent_col' in composite_unique does not exist on this struct. Available columns: id, tenant_id, user_id
 --> $DIR/compile_error_composite_unique_nonexistent_column.rs:7:1
  |
7 | #[composite_unique = "tenant_id, nonexistent_col, user_id"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: This error indicates that a composite unique constraint is trying to reference a column that doesn't exist on the struct.
  = note: Only columns that exist on this struct can be used in composite unique constraints.
